@@ -1,30 +1,38 @@
 package at.ac.tuwien.sepr.groupphase.backend.unittests;
 
+import at.ac.tuwien.sepr.groupphase.backend.basetest.TestData;
 import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.RecipeBookCreateDto;
 import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.RecipeBookDetailDto;
 import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.RecipeListDto;
 import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.UserListDto;
 import at.ac.tuwien.sepr.groupphase.backend.endpoint.mapper.RecipeMapper;
+import at.ac.tuwien.sepr.groupphase.backend.endpoint.mapper.UserMapper;
+import at.ac.tuwien.sepr.groupphase.backend.entity.ApplicationUser;
 import at.ac.tuwien.sepr.groupphase.backend.entity.Recipe;
 import at.ac.tuwien.sepr.groupphase.backend.entity.RecipeBook;
+import at.ac.tuwien.sepr.groupphase.backend.exception.ValidationException;
 import at.ac.tuwien.sepr.groupphase.backend.repository.RecipeBookRepository;
 import at.ac.tuwien.sepr.groupphase.backend.repository.RecipeRepository;
+import at.ac.tuwien.sepr.groupphase.backend.repository.UserRepository;
 import at.ac.tuwien.sepr.groupphase.backend.service.RecipeBookService;
 import jakarta.transaction.Transactional;
 import jakarta.validation.ConstraintViolationException;
 import jakarta.validation.Valid;
 import jakarta.validation.Validator;
-import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.context.i18n.LocaleContextHolder;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -36,8 +44,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 @SpringBootTest
 @ActiveProfiles("test")
 @Transactional
-@Disabled
-class RecipeBookServiceTest {
+class RecipeBookServiceTest implements TestData {
     @Autowired
     private RecipeBookService recipeBookService;
 
@@ -49,31 +56,52 @@ class RecipeBookServiceTest {
 
     @Autowired
     private Validator validator;
+
     @Autowired
     private RecipeBookRepository recipeBookRepository;
-    @Test
-    void searchReturnsRecipeBooksWhenNameMatches() {
-        assertEquals("Familienrezepte", recipeBookRepository.search("Familienrezepte").getFirst().getName());
+
+    @Autowired
+    private UserRepository userRepository;
+
+    @Autowired
+    private UserMapper userMapper;
+
+    @BeforeAll
+    static void setUp() {
+        LocaleContextHolder.setLocale(Locale.ENGLISH);
     }
 
     @Test
-    void searchReturnsEmptyListWhenNoNameMatches() {
-        assertEquals(Collections.emptyList(), recipeBookRepository.search("Nonexistent"));
+    void searchReturnsRecipeBooksWhenNameMatches() {
+        String name = "indische";
+        PageRequest pageRequest = PageRequest.of(0, 10); // Assuming page size is 10
+        Page<RecipeBook> page = recipeBookRepository.findByNameContainingIgnoreCaseOrderByName(name, pageRequest);
+
+        // Verify that there are results
+        assertTrue(page.hasContent());
+
+        // Verify the name of the first recipe book
+        assertEquals("Indische Spezialitäten", page.getContent().get(0).getName());
     }
 
     @Test
     void searchReturnsRecipeBooksRegardlessOfCase() {
-        assertEquals("Familienrezepte", recipeBookRepository.search("Familien").getFirst().getName());
+        PageRequest pageRequest = PageRequest.of(0, 10);
+        Page<RecipeBook> page = recipeBookRepository.findByNameContainingIgnoreCaseOrderByName("inDISche", pageRequest);
+        assertTrue(page.hasContent());
+        assertEquals("Indische Spezialitäten", page.getContent().get(0).getName());
     }
 
     @Test
-    void searchReturnsEmptyListWhenNameIsNull() {
-        assertEquals(16, recipeBookRepository.search(null).size());
+    void searchReturnsEmptyListWhenNameIsEmpty() {
+        PageRequest pageRequest = PageRequest.of(0, 10);
+        Page<RecipeBook> page = recipeBookRepository.findByNameContainingIgnoreCaseOrderByName("", pageRequest);
+        assertEquals(9, page.getTotalElements());
     }
 
     @Test
     void getAllRecipesWithIdFromToReturnsRecipesInIdRange() {
-        List<RecipeBook> result = recipeBookRepository.getAllRecipesWithIdFromTo(1, 2);
+        List<RecipeBook> result = recipeBookRepository.findByIdBetweenOrderById(1L, 2L);
         assertEquals(2, result.size());
         assertEquals(1L, result.get(0).getId());
         assertEquals(2L, result.get(1).getId());
@@ -81,20 +109,21 @@ class RecipeBookServiceTest {
 
     @Test
     void getAllRecipesWithIdFromToReturnsEmptyListWhenNoRecipesInIdRange() {
-        List<RecipeBook> result = recipeBookRepository.getAllRecipesWithIdFromTo(100, 200);
+        List<RecipeBook> result = recipeBookRepository.findByIdBetweenOrderById(100L, 200L);
         assertTrue(result.isEmpty());
     }
 
     @Test
-    void getAllRecipesWithIdFromToReturnsRecipesInIdRangeWhenRangeIsSingleId() {
+    void getAllRecipeBooksWithIdFromToReturnsRecipesInIdRangeWhenRangeIsSingleId() {
 
-        List<RecipeBook> result = recipeBookRepository.getAllRecipesWithIdFromTo(1, 1);
+        List<RecipeBook> result = recipeBookRepository.findByIdBetweenOrderById(1L, 1L);
         assertEquals(1, result.size());
         assertEquals(1L, result.getFirst().getId());
     }
 
     @Test
-    void createRecipeBookSuccessfully() {
+    void createRecipeBookSuccessfully() throws ValidationException {
+        userAuthenticationByEmail("admin@email.com");
         List<UserListDto> userRecipeBooks = new ArrayList<>();
         UserListDto userListDto = new UserListDto(3L, "a");
         userRecipeBooks.add(userListDto);
@@ -104,7 +133,7 @@ class RecipeBookServiceTest {
         RecipeBookCreateDto createDto = new RecipeBookCreateDto("Fast Food", "This recipe contains fast food dishes",
             userRecipeBooks, r);
 
-        RecipeBookDetailDto recipeBook = recipeBookService.createRecipeBook(createDto, 1L);
+        RecipeBookDetailDto recipeBook = recipeBookService.createRecipeBook(createDto);
 
         assertAll(
             () -> assertNotNull(recipeBook),
@@ -119,22 +148,22 @@ class RecipeBookServiceTest {
     }
 
     @Test
-    void recipeCreationFailsIfNameIsNull() {
+    void recipeBookCreationFailsIfNameIsNull() {
         List<UserListDto> users = new ArrayList<>();
-        UserListDto userListDto = new UserListDto(3L, "Admin");
+        ApplicationUser user = userRepository.findFirstById(1L);
         List<Recipe> recipes = recipeRepository.getRecipeByIds(List.of(2L, 3L));
-        users.add(userListDto);
+        users.add(userMapper.userToUserListDto(user));
         RecipeBookCreateDto createDto = new RecipeBookCreateDto(null, null,
             users, recipeMapper.recipesToRecipeListDto(recipes));
         ConstraintViolationException exception = assertThrows(ConstraintViolationException.class, () -> {
             validate(createDto);
-            recipeBookService.createRecipeBook(createDto, 1L);
+            recipeBookService.createRecipeBook(createDto);
         });
         assertTrue(exception.getMessage().contains("Validation failed for name: must not be null"));
     }
 
     @Test
-    void recipeCreationFailsIfNameTooLong() {
+    void recipeBookCreationFailsIfNameTooLong() {
         List<UserListDto> users = new ArrayList<>();
         UserListDto userListDto = new UserListDto(4L, "User");
         users.add(userListDto);
@@ -147,7 +176,7 @@ class RecipeBookServiceTest {
 
         ConstraintViolationException exception = assertThrows(ConstraintViolationException.class, () -> {
             validate(createDto);
-            recipeBookService.createRecipeBook(createDto, 1L);
+            recipeBookService.createRecipeBook(createDto);
         });
         assertTrue(exception.getMessage().contains("between 1 and 100"));
     }
